[package]
name = "structural_cron"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.30", optional = true }
serde = { version = "1", optional = true }

[features]
time_rs = ["dep:time"]
serde = ["dep:serde"]

[dev-dependencies]
serde_test = "1"
